[project]
name = "ai-data-pipelines"
version = "0.0.1"
description = "A comprehensive collection of AI data extraction and indexing pipelines"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "requests",
    "python-frontmatter",
    "openai",
    "rich",
    "keyboard",
    "petcache>=0.0.1",
    "nbconvert>=7.16.6",
    "dlt[duckdb]>=1.17.1",
    "minsearch==0.0.7",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
